@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.35
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
